# restaurant-simulation

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
files/: AdminLogisticsMenu.txt  AdminStatusMenu.txt  CustomerMenu.txt  FoodMenu.txt  IngredientFile.txt
lib/: AdminLogistics.hpp  AdminStatus.hpp  Customer.hpp  Date.hpp  Facts.hpp  Goods.hpp  Ingredient.hpp  IngredientStock.hpp  Menu.hpp  Path.hpp  User.hpp
src/: AdminLogistics.cpp  AdminStatus.cpp  CMakeLists.txt  Customer.cpp  Date.cpp  Facts.cpp  Goods.cpp  Ingredient.cpp  IngredientStock.cpp  Path.cpp  User.cpp  main.cpp
tests/: AdminTests.cpp  CustomerTests.cpp  CustomerTests2.cpp  DateTests.cpp  GoodsTest.cpp  IngredientStockTests.cpp  IngredientTests.cpp  mainTests.cpp
